--- a/Dockerfile.pybase
+++ b/Dockerfile.pybase
@@ -21,3 +21,8 @@ RUN apt-get install wget && \
     python3.6 get-pip.py && \
     rm get-pip.py && \
     apt-get autoclean
+
+RUN python2.7 -m pip install --upgrade pip && \
+    python3.4 -m pip install --upgrade pip && \
+    python3.5 -m pip install --upgrade pip && \
+    python3.6 -m pip install --upgrade pip
